--- a/DesignerRHN/DesignerRHN-war/web/gersaludocupacional.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/gersaludocupacional.xhtml
@@ -21,7 +21,7 @@
                             <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 250px;left: 20px" value="[Citas Medicas...]"></p:commandButton>
                             <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 290px;left: 20px" value="[Otros Reportes...]"></p:commandButton>
                            
-                        <p:commandButton icon="ui-icon-closethick" style="position: absolute;top: 335px;left: 260px" value="atras" ></p:commandButton>
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 335px;left: 260px" value="atras" ></p:commandButton>
 
                     </p:panel>
                 </h:form>
