--- a/DesignerRHN/DesignerRHN-war/web/juzgado.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/juzgado.xhtml
@@ -196,7 +196,7 @@
                         <p:commandButton style="position: absolute; left: 100px; top: 497px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="BUSCARCENTROCOSTO" value="Buscar Ciudad" actionListener="#{controlJuzgados.lovEmpresas()}" process="@this" />
                         <p:commandButton style="position: absolute; left: 203px; top: 497px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" id="MOSTRARTODOS" disabled="#{controlJuzgados.mostrarTodos}" value="Mostrar Todos" actionListener="#{controlJuzgados.cancelarModificacion()}" process="@this"/>
                         <p:commandButton style=" position: absolute; left: 730px; top: 497px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" disabled="#{controlJuzgados.guardado}" onclick="confirmarGuardar.show();" update=":form:datosJuzgados" process="@this" />
-                        <p:commandButton style=" position: absolute; left: 808px; top: 497px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-closethick" id="ATRAS" value="Atras" actionListener="#{controlCentroCosto.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style=" position: absolute; left: 808px; top: 497px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlCentroCosto.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
 
