--- a/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion.xhtml
@@ -17,7 +17,7 @@
                             <p:commandButton style="font-size: 12px; border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 20px;left: 8px" value="[Indicades de Gestion...]"></p:commandButton>
                             <p:commandButton style="font-size: 12px;border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 60px;left: 8px" value="[Proyecciones y RetroActivos...]"></p:commandButton>
                         </fieldset>
-                        <p:commandButton icon="ui-icon-closethick" style="position: absolute;top: 152px;left: 260px" value="atras" ></p:commandButton>
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 152px;left: 260px" value="atras" ></p:commandButton>
                     </p:panel>
                 </h:form>
             </ui:define>
