--- a/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion1.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/liquidarproyeccion1.xhtml
@@ -63,7 +63,7 @@
                                 <h:outputText style="position: absolute;top: 285px;left: 405px; width: 130px; height: 200px; font-size: 12px  " value="Elimina los resultados de la liquidación y los calculos de retroactivos"/>
                             </fieldset>
                         </fieldset>
-                        <p:commandButton style=" position: absolute; left: 800px; top: 500px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-closethick" id="ATRAS" value="Atras"/>
+                        <p:commandButton style=" position: absolute; left: 800px; top: 500px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras"/>
                         
                         <p:dialog header="Tipo Entidad" widgetVar="opciones" draggable="false" resizable="false" closable="false" id="opciones"  
                                   showEffect="fade" hideEffect="fade" width="290" height="170" modal="true" style="font-size: 11px;">
@@ -74,7 +74,7 @@
                                 <legend value="Opciones" style="font-size: 14px;position: absolute; left: 20px; top: 20px; width: 30px; font-weight:bold" />
                                 <p:commandButton style="font-size: 12px; border-color:#045491; width:180px; border-width: 2px; position: absolute;top: 25px;left: 75px" value="Borrar Liquidación"></p:commandButton>
                                 <p:commandButton style="font-size: 12px;border-color:#045491; width:180px; border-width: 2px; position: absolute;top: 65px;left: 75px" value="Cerrar Liquidación"></p:commandButton>
-                                <p:commandButton value="Atras" onclick="opciones.hide();" style="position: absolute; top: 110px; left: 195px" icon="ui-icon-closethick" process="@this" />
+                                <p:commandButton value="Atras" onclick="opciones.hide();" style="position: absolute; top: 110px; left: 195px" icon="ui-icon-arrowreturnthick-1-w" process="@this" />
                             </fieldset>
                         </p:dialog>
                     </p:panel>
