--- a/DesignerRHN/DesignerRHN-war/web/opciones.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/opciones.xhtml
@@ -21,7 +21,7 @@
 
 
                         </fieldset>
-                        <p:commandButton icon="ui-icon-closethick" style="position: absolute;top: 152px;left: 235px" action="liquidarproyeccion1.xhtml" value="atras" ></p:commandButton>
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 152px;left: 235px" action="liquidarproyeccion1.xhtml" value="atras" ></p:commandButton>
 
                     </p:panel>
                 </h:form>
