--- a/DesignerRHN/DesignerRHN-war/web/perreferencialaboral1.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/perreferencialaboral1.xhtml
@@ -162,7 +162,7 @@
 
                         <p:commandButton style=" position: absolute; left: 15px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" actionListener="#{controlHvReferencias1.cancelarModificacion()}"  value="Refrescar" process="@this" />
                         <p:commandButton style=" position: absolute; left: 730px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" disabled="#{controlHvReferencias1.guardado}" icon="ui-icon-check" id="ACEPTAR" value="Aceptar"  actionListener="#{controlHvReferencias1.revisarDialogoGuardar()}"   process="@this"   />
-                        <p:commandButton style=" position: absolute; left: 807px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-closethick" id="ATRAS" value="Atras" action="perReferenciaLaboral1Atras"    />
+                        <p:commandButton style=" position: absolute; left: 807px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" action="perReferenciaLaboral1Atras"    />
 
 
                         <p:dialog header="Parentesco" widgetVar="sucursalesDialogo" draggable="false" resizable="false" closable="false" id="sucursalesDialogo"  
