--- a/DesignerRHN/DesignerRHN-war/web/tipoembargo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipoembargo.xhtml
@@ -115,7 +115,7 @@
 
                         <p:commandButton style=" position: absolute; left: 15px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR"  actionListener="#{controlTiposEmbargos.cancelarModificacion()}" value="Refrescar" process="@this" />
                         <p:commandButton style=" position: absolute; left: 698px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" disabled="#{controlTiposEmbargos.guardado}" onclick="confirmarGuardar.show();"   update="datosTiposEmbargos"  process="@this"   />
-                        <p:commandButton style=" position: absolute; left: 785px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-closethick" id="ATRAS" value="Atras"    />
+                        <p:commandButton style=" position: absolute; left: 785px; top: 487px; font-size: 10px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras"    />
 
 
 
